# ICSearcher

./: .gitignore  0.collect.py  0.collect_px4.py  4.pre_validate.py  4.pre_validate_px4.py  4.validate.py  4.validate_px4.py  README.md  mav.parm  pyproject.toml
Cptool/: config.py  config.yaml  gaMavlink.py  gaSimManager.py  mavtool.py
ModelFit/: approximate.py
data/: config.yaml  config.yaml.example
icsearcher/: __init__.py  anomaly.py  comms.py  concurrency.py  config.py  logging_config.py  model.py  params.py  sim.py
icsearcher/range/: __init__.py  problem.py  searcher.py
icsearcher/search/: __init__.py  fuzzer.py  io.py  problem.py  searcher.py
pipelines/: 1_convert.py  2_train.py  4_validate.py  5_range.py  __init__.py  __main__.py  collect.py  convert.py  fuzz.py  train.py  validate.py
range/: rangesearcher.py
scripts/: setup_sims.sh
tests/: conftest.py  test_anomaly.py  test_concurrency.py  test_config.py  test_import_smoke.py  test_io.py  test_lint.py  test_mavtool.py  test_model.py  test_search.py
uavga/: fuzzer.py  problem.py  searcher.py
