[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "icsearcher"
version = "0.3.0"
description = "Improved LGDFuzzer: surrogate-guided fuzzing for UAV autopilot controller parameters (ArduPilot / PX4)"
authors = ["rain <rain@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/BlackJoker1995/ParameterRecommendation"
packages = [
    { include = "icsearcher" },
]

# PyTorch CUDA index. CUDA 12.1 wheels. Change the url suffix (cu118/cu124) if
# your driver requires a different CUDA toolkit version.
[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# Core scientific stack
numpy = ">=1.24,<2.0"
pandas = ">=2.0"
scipy = ">=1.10"
scikit-learn = ">=1.2"
matplotlib = ">=3.6"

# Drone comms / sim control
pymavlink = ">=2.4"
pyulog = ">=1.0"
pexpect = ">=4.8"

# GA / search. pymoo is the engine for both fuzzing (differential evolution)
# and range derivation (NSGA-II), with built-in GD/IGD/HV/Spacing indicators.
# geatpy (the legacy engine) was removed in stage 3.
pymoo = ">=0.6"

# Surrogate model backend. Stage 4 migrated from Keras/TensorFlow to PyTorch
# (CUDA 12.1 wheels via the explicit pytorch-cu121 source). The legacy
# tensorflow/keras/keras-tcn and ray dependencies were removed.
torch = { version = ">=2.1", source = "pytorch-cu121" }

# Config / logging / utils
pyyaml = ">=6.0"
loguru = ">=0.7"
tqdm = ">=4.65"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
pytest-cov = ">=4.1"
ruff = ">=0.1"
black = ">=23.10"

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = ["model", "result", "fig"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]
