[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icsearcher"
version = "0.3.0"
description = "Improved LGDFuzzer: surrogate-guided fuzzing for UAV autopilot controller parameters (ArduPilot / PX4)"
readme = "README.md"
license = "MIT"
authors = [{ name = "rain", email = "rain@users.noreply.github.com" }]
requires-python = ">=3.9,<3.13"

# All runtime dependencies. `torch` here is the PyPI wheel (CPU by default).
# For an NVIDIA GPU build, see the CUDA note in README §1 — install the CUDA
# wheel manually after `uv sync` (uv does not support per-build source routing
# in a single manifest cleanly).
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "pymavlink>=2.4",
    "pyulog>=1.0",
    "pexpect>=4.8",
    # GA / search: pymoo powers both fuzzing (DE) and range derivation (NSGA-II)
    "pymoo>=0.6",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "tqdm>=4.65",
    # Surrogate model backend. CPU wheel from PyPI; swap for CUDA after install.
    "torch>=2.1",
]

# Console entry points: run each pipeline stage as `uv run icsearcher-<stage>`
# (no `python`, no path). Installed automatically by `uv sync`.
[project.scripts]
icsearcher-collect  = "pipelines.__main__:collect"
icsearcher-convert  = "pipelines.__main__:convert"
icsearcher-train    = "pipelines.__main__:train"
icsearcher-fuzz     = "pipelines.__main__:fuzz"
icsearcher-validate = "pipelines.__main__:validate"
icsearcher-range    = "pipelines.__main__:range_stage"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.10",
]

# Tell hatchling which packages to ship (so the entry points resolve).
[tool.hatch.build.targets.wheel]
packages = ["icsearcher", "pipelines"]

# ---------------------------------------------------------------------------
# Tool config
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = ["model", "result", "fig", "sims"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]
